--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,17 +104,36 @@ body {
     justify-content: center; /* Center the carousel horizontally */
     align-items: center; /* Center the carousel vertically (optional) */
     flex-direction: column; /* Ensure content stacks vertically */
-    margin-top: 40px; /* Adjust margin as needed */
+    margin-top: 40px;
+    border-top: 2px solid rgb(29, 1, 25);
 }
 
 .carousel {
-    max-width: 800px; /* Set a maximum width for the carousel */
+    max-width: 50%; /* Set a maximum width for the carousel */
     width: 100%; /* Allow the carousel to adjust to the parent's width */
     border: 2px solid #ddd;
-    border-radius: 8px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     background: #ffffff;
     position: relative;
-    overflow: hidden; /* Needed for button positioning */
+    overflow: hidden;
+    justify-content: center; /* Needed for button positioning */
+    border: 4px solid rgb(29, 1, 25);
+}
+
+.galeryTitle {
+    width: 50%;
+    text-align: center;
+    border-top: 4px solid rgb(29, 1, 25);
+    border-left: 4px solid rgb(29, 1, 25);
+    border-right: 4px solid rgb(29, 1, 25);
+    margin-bottom: 0;
+    padding-bottom: 20px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    padding-top: 10px;
+    background:rgb(0, 0, 92);
+    color:bisque
 }
 
 .carousel-images {
@@ -124,8 +143,9 @@ body {
 
 .carousel-images img {
     width: 100%;
-    height: auto;
+    height:400px;
     object-fit: cover;
+    flex-shrink: 0;
 }
 
 button {
