--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,3 +184,54 @@ button.next {
 button:hover {
     background: rgba(0, 0, 0, 0.8);
 }
+
+.testimonials {
+    margin-left: 10%;
+    margin-top: 40px;
+    max-width: 80%;
+    justify-content: center;
+}
+
+.cardList {
+    height: 200px;
+    overflow-y: scroll  ;
+}
+
+.customerName {
+    color: blue;
+    font-weight: bolder;
+    text-decoration: underline;
+    font-size: 20px;
+}
+
+.testimonialList {
+    list-style-type: none;
+}
+
+.listitem {
+    margin-bottom: 10px;
+}
+
+.cardHeader, .headerTitle, .galeryTitle {
+    transition: all 0.5s ease-in-out; ;
+}
+
+.galeryTitle:hover, .cardHeader:hover, .headerTitle:hover {
+    color: yellow;
+    text-shadow: 3px 3px 15px yellow; ;
+}
+
+.footer {
+    margin-top: 20px;
+    padding: 20px;
+    min-height: 50px;
+    background: var(--headerBlue);
+    color:#ffffff;
+}
+
+.footerTitle {
+    text-align: center;
+    color:bisque;
+    padding-bottom: 40px;
+    text-decoration: underline;
+}
