--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,12 @@
 }
 
 
+#logo {
+    border: 4px solid var(--headerBlue);
+    height: 72px;
+}
+
+
 .flex {
     display: flex;
     flex-direction: row;
@@ -13,9 +19,13 @@
 .nav-list {
     list-style-type: none;
     align-items: end;
-    width:100%;
-    justify-content: end;
+    width:40%;
     margin-right: 25px;
+    margin-left: 50%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    max-width: 400px;
+    
 }
 
 .nav-hover {
@@ -31,7 +41,7 @@
 }
 
 nav {
-    background-color: var(--headerBlue); 
+    background: linear-gradient(90deg, var(--headerBlue),rgb(3, 0, 37)); 
     display: flex; 
     flex-direction: row;
     height: 80px; 
@@ -40,9 +50,7 @@ nav {
 
 }
 
-.logo {
-    height:80px;
-}
+
 
 .title {
     justify-self: center;
@@ -102,6 +110,7 @@ body {
 
 .cardlistele {
     margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 .gallery {
@@ -155,9 +164,9 @@ body {
 }
 
 .carousel-description {
-    color:rgb(0, 0, 56);
+    color:rgb(255, 230, 2);
     font-weight: bolder;
-    text-shadow: 4px 4px 8px rgb(254, 255, 255) ;
+    text-shadow: 4px 4px 6px rgb(254, 255, 255) ;
     font-size: 20px;
     text-align: center;
     background: rgba(43, 43, 43, 0.219);
@@ -210,8 +219,11 @@ button:hover {
 }
 
 .cardList {
-    height: 200px;
+    height: 300px;
     
+}
+.cardlistserv {
+    height:fit-content
 }
 
 .cardListTest {
@@ -247,7 +259,7 @@ overflow-y: scroll  ;
     margin-top: 40px;
     padding: 20px;
     min-height: 50px;
-    background: var(--headerBlue);
+    background: linear-gradient(90deg, var(--headerBlue),rgb(3, 0, 37));
     color:#ffffff;
 }
 
@@ -309,5 +321,16 @@ overflow-y: scroll  ;
     .galleryTitle:focus .cardHeader:focus, .headerTitle:focus {
         color: yellow;
         text-shadow: 3px 3px 15px yellow; ;
+    }
+
+    .nav-list {
+      
+       
+        width:60%;
+        margin-right: 25px;
+        margin-left: 10%;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        
     }
  }
