--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,7 @@ body {
     justify-self: center;
     margin-top: 0;
     margin-bottom: 2px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
 }
 
@@ -72,6 +73,7 @@ body {
     margin-top: 2px;
     margin-bottom: 40px;
     font-weight: bolder;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .titletext {
@@ -246,8 +248,10 @@ overflow-y: scroll  ;
     margin-bottom: 10px;
 }
 
+
 .cardHeader, .headerTitle, .galleryTitle {
-    transition: all 0.5s ease-in-out; ;
+    transition: all 0.5s ease-in-out; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .galleryTitle:hover, .cardHeader:hover, .headerTitle:hover {
